# esp32-ili9341-slint

./: .gitignore  Cargo.toml  README.md  build.rs  test_server.py  test_ws.py  ui.slint
src/: display_screen.rs  http_client.rs  main.rs  slint_renderer.rs  touch_input.rs  wifi.rs  ws_client.rs
