[package]
edition      = "2024"
name         = "proj1"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "proj1"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

critical-section = "1.2.0"
esp-alloc        = { version = "0.9.0" }

slint = { version = "1.14.1", default-features = false, features = ["libm", "unsafe-single-threaded", "compat-1-2", "renderer-software"] }
ili9341 = "0.6.0"
mipidsi = "0.9.0"
embedded-hal = "1.0.0"
embedded-graphics-core = "0.4.0"
embedded-hal-bus = "0.3.0"
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-backtrace = { version = "0.18.1", features = ["esp32", "panic-handler", "println"] }
log = "0.4.28"
display-interface-spi = "0.5.0"

[build-dependencies]
slint-build = { version = "1.14.1" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
