[package]
edition      = "2024"
name         = "proj1"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "proj1"
path = "./src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-alloc        = { version = "0.9.0" }
esp-radio = { version = "0.17.0", features = ["esp32", "wifi", "smoltcp", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-backtrace = { version = "0.18.1", features = ["esp32", "panic-handler", "println"] }
esp-rtos = { version = "0.2.0", features = [
  "esp-radio",
  "esp32",
] }

slint = { version = "1.14.1", default-features = false, features = ["libm", "unsafe-single-threaded", "compat-1-2", "renderer-software"] }
mipidsi = "0.9.0"
embedded-hal = "=1.0.0"
embedded-graphics-core = "0.4.0"
embedded-hal-bus = "0.3.0"

xpt2046 = { git = "https://github.com/lampaBiurkowa/xpt2046.git" }
embedded-sdmmc = "0.9.0"
blocking-network-stack = { git = "https://github.com/AlexandreDoucet/blocking-network-stack.git", default-features = false, features = [
  "dhcpv4",
  "tcp",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "socket-raw",
] }
embedded-io = "0.7.1"
heapless = "0.8.0"
thiserror =  { version = "2.0.17", default-features = false }

[build-dependencies]
slint-build = { version = "1.14.1" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
